--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -71,7 +71,7 @@
             android:id="@+id/prev"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="prev" />
+            android:text="Print" />
 
         <LinearLayout
             android:layout_width="match_parent"
